--- a/src/scss/_libs/_benefit01.scss
+++ b/src/scss/_libs/_benefit01.scss
@@ -190,11 +190,12 @@
 		}
 		//
 		.coupon-mall{
+			padding-top:16px;
 			.desc{
 				color:$navy-040;
 			}
 			.agree-group{
-				margin-top:29px;
+				margin-top:16px;
 			}
 		}
 
