--- a/src/scss/_ct.scss
+++ b/src/scss/_ct.scss
@@ -48,15 +48,17 @@
 			.count-thumb{
 				display:block;
 				position:absolute;
-				top:0;
+				top:-2px;
 				left:0;
-				width:24px;
-				height:24px;
-				font-size:$font-sm;
-				color:$gray-000;
+				width:32px;
+				height:32px;
+				font-size:$font-sm2;
+				font-weight:700;
+				color:$default;
 				text-align:center;
 				line-height:24px;
-				background:$default;
+				background-color:$gray-000;
+				border:4px solid $default;
 				border-radius:50%;
 				transform:translate(-50%,0);
 				transition:left .1s linear;
