--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -45,11 +45,9 @@ html.is-open, html.is-open body {
 		border-radius: $border-radius-20;
         .layer-header {
             max-height: 66px;
-            padding: 16px 20px 16px 50px;
-			text-indent:-30px;
+            padding: 14px 20px 12px;
             font-size: 18px;
             font-weight: bold;
-			text-align:center;
 			border-bottom:1px solid $navy-020;
 
             .title{
@@ -58,10 +56,9 @@ html.is-open, html.is-open body {
                 font-weight: 500;
             }
             .layer-close {
-				display:inline-flex;
                 position: absolute;
-                top: 16px;
-                left: 20px;
+                top: 20px;
+                left: 16px;
             }
         }
         .layer-body {
@@ -96,6 +93,15 @@ html.is-open, html.is-open body {
     &.type-bottom {
         align-items: flex-end;
         padding: 0;
+		.layer-header{
+			max-height: 66px;
+            padding: 16px 20px 16px 50px;
+			text-indent:-30px;
+            font-size: 18px;
+            font-weight: bold;
+			text-align:center;
+			border-bottom:1px solid $navy-020;
+		}
         &:before {
             opacity: 0;
             transition: opacity 0.3s cubic-bezier(1, 0, 1, 1);
