--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -95,12 +95,13 @@ html.is-open, html.is-open body {
         padding: 0;
 		.layer-header{
 			max-height: 66px;
-            padding: 16px 20px 16px 50px;
-			text-indent:-30px;
-            font-size: 18px;
-            font-weight: bold;
-			text-align:center;
+			padding:16px 20px 16px;
+			font-size:$font-lg;
+			font-weight:700;
 			border-bottom:1px solid $navy-020;
+			padding: 16px 20px 16px 50px;
+			text-indent:-30px;
+			text-align:center;
 		}
 		.layer-close {
 			right:unset;
