--- a/src/components/input.html
+++ b/src/components/input.html
@@ -67,11 +67,11 @@
 									<input type="password" id="fakePassword" class="ip-txt" placeholder="비밀번호 확인">
 									<div class="line"></div>
 									<span class="icon-group">
-										<button type="button" class="ip-icon">
+										<button type="button" class="btn-del">
 											<i class="ico delete lg"></i>
 										</button>
 										<button id="toggler" type="button" class="ip-icon">
-											<i class="ico eye-on md"></i>
+											<i class="ico eye-on lg"></i>
 										</button>
 									</span>
 								</div>
@@ -82,12 +82,12 @@
 								<div class="row">
 									<input type="number" class="ip-txt">
 									<div class="line"></div>
-									<span class="icon-group">
+									<div class="icon-group">
 										<button type="button" class="btn-del">
 											<i class="ico delete lg"></i>
 										</button>
 										<span class="time">3:00</span>
-									</span>
+									</div>
 								</div>
 								<p class="error-txt">인증코드가 일치하지 않습니다</p>
 							</div>
@@ -102,7 +102,7 @@
 										<input type="text" class="ip-txt" data-pos="4" placeholder="0000" maxlength="4">
 										<div class="line"></div>
 										<button type="button" class="icon-group btn-del">
-											<i class="ico delete md"></i>
+											<i class="ico delete lg"></i>
 										</button>
 									</div>
 								</div>
