--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -82,6 +82,8 @@ $icon-size: (
         "camera": "icon_camera.svg",
         "camera02": "icon_camera02.svg",
         "icon-tip-green060": "icon_tip_green060.svg",
+        "round-trip": "icon_round_trip.svg",
+        "one-way": "icon_oneway.svg",
     )
     
 ) !default;
