--- a/src/components/icon.html
+++ b/src/components/icon.html
@@ -150,6 +150,10 @@
 							<span class="text">arrow-right-nav060</span>
 						</li>
 						<li>
+							<span class="icon"><i class="ico arrow-bot-nav030 lg"></i></span>
+							<span class="text"> arrow-bot-nav030</span>
+						</li>
+						<li>
 							<span class="icon"><i class="ico arrow-bot-nav060 lg"></i></span>
 							<span class="text"> arrow-bot-nav060</span>
 						</li>
