--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -51,6 +51,7 @@ $icon-size: (
         "arrow-right-nav040": "icon_arrow_right_navy040.svg",
         "arrow-right-nav050": "icon_arrow_right_navy050.svg",
         "arrow-right-nav060": "icon_arrow_right_navy060.svg",
+        "arrow-bot-nav030": "icon_arrow_bot_navy030.svg",
         "arrow-bot-nav060": "icon_arrow_bot_navy060.svg",
         "arrow-left": "arrow-left.svg",
         "arrow-bot": "icon_arrow_bot.svg",
