--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -21,6 +21,9 @@ button, input, optgroup, select, textarea{
 	font-size: 100%;
 	vertical-align: baseline;
 	box-sizing: border-box;
+	-webkit-tap-highlight-color:transparent;
+	-webkit-tap-highlight-color:rgba(0, 0, 0, 0);
+	outline: none;
 }
 a{color:inherit; text-decoration: none;}
 button{background-color: transparent; cursor: pointer;}
@@ -381,7 +384,7 @@ textarea {
 		button {
 			position:relative;
 			height:55px;
-			font-size:$font-md;
+			@include fontSize(16);
 			color:$navy-040;
 			text-align:left;
 			@include ell;
@@ -396,7 +399,7 @@ textarea {
 			}
 		}
 		&.active button {
-			.ico{
+			.ico:not(.ico-check){
 				transform:translate(0,-50%) rotate(180deg);
 			}
 		}
@@ -414,6 +417,56 @@ textarea {
 	.active > & > div,
 	&.active > div {
 		@include acdo(100%, 0, .3s, cubic-bezier(0, 0, 0, 1));
+	}
+}
+
+/* accordion */
+.ui-accodion{
+	*{
+		transition:all .3s;
+	}
+	.layer{
+		display:none;
+		overflow:hidden;
+		.layer-cont{
+			padding:24px 0;
+		}
+	}
+	.ctr{
+		display:flex;
+		align-items:center;
+		padding:16px 0;
+		border-bottom:1px solid $navy-020;
+		.btn-check{
+			display:inline-flex;
+			@include fontSize(16);
+			font-weight:500;
+		}
+		.btn-acco{
+			display:flex;
+			flex:1;
+			@include fontSize(16);
+			font-weight:500;
+			color:$navy-040;
+			text-align:left;
+			p{
+				flex-grow:1;
+			}
+			.emp{
+				color:$navy-070;
+			}
+			.ico{
+				vertical-align:top;
+				transition:transform .3s;
+			}
+		}
+	}
+	li.active{
+		.btn-acco{
+			.ico{
+				transform:rotate(180deg);
+			}
+		}
 	}
 }
 
