--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -41,7 +41,7 @@ html.is-open, html.is-open body {
         flex-direction: column;
         width: 100%;
         max-height: 100%;
-        background: #fff;
+        // background: #fff;
 		border-radius: $border-radius-20;
         .layer-header {
             max-height: 66px;
@@ -93,6 +93,26 @@ html.is-open, html.is-open body {
     &.type-bottom {
         align-items: flex-end;
         padding: 0;
+		.layer-wrap{
+			display:flex;
+			flex-direction:column;
+			position:relative;
+			max-height:100%;
+			background:#fff;
+			border-top-left-radius:20px;
+			border-top-right-radius:20px;
+			.layer-header{
+				flex:0 0 auto;
+			}
+			.layer-body{
+				flex:1 1 auto;
+				overflow:auto;
+			}
+			.layer-footer{
+				flex:0 0 auto;
+				padding:0;
+			}
+		}
 		.layer-header{
 			max-height: 66px;
 			padding:16px 20px 16px;
@@ -117,6 +137,8 @@ html.is-open, html.is-open body {
                 transition: opacity 0.3s cubic-bezier(0, 0, 0, .65);
             }
             .layer-container {
+				justify-content:flex-end;
+				height:100%;
                 transform: none;
                 transition: transform 0.6s;
             }
