--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -235,7 +235,8 @@
 			left:0;
 			bottom:0;
 			width:100%;
-			height:auto;
+			// height:auto;
+			height:74px;
 			.btn-wrap{
 				position:static;
 				height:auto;
