아코디언 수정

--- a/src/components/etc.html
+++ b/src/components/etc.html
@@ -79,6 +79,7 @@
 						<ul>
 							<li>
 								<div class="ctr">
+									<!-- btn-acco selector -->
 									<button type="button" class="btn-acco">
 										<span class="emp">필수</span> 
 										<p>개인정보 수집/이용 동의</p>
@@ -86,6 +87,7 @@
 									</button>
 								</div>
 								<div class="layer">
+									<!-- 여백은 layer-cont or 하위 dom 적용 -->
 									<div class="layer-cont">
 										<div class="agree-cont">
 											<p class="title-xs">
