.list >  list-style 숫자증감  추가, 두번째 줄 이상 text 숫자영역 침범 안하게 처리

--- a/src/scss/_text.scss
+++ b/src/scss/_text.scss
@@ -207,6 +207,7 @@
     &.numeric {
 		counter-reset: section;
         li {
+            display: flex;
 			list-style: none;
             &:before {
 				counter-increment: section;
