--- a/src/components/input.html
+++ b/src/components/input.html
@@ -50,16 +50,120 @@
 
 						<div class="ip-wrap">
 							<div class="ip-group">
-								<div class="row">
-									<label for="ip01" class="ip-label">추천인 아이디</label>
-									<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
-									<button type="button" class="icon-group btn-del">
-										<i class="ico delete lg"></i>
-									</button>
-									<div class="line"></div>
+								<label for="ip01" class="ip-label">추천인 아이디</label>
+								<div class="row ico">
+									<div class="module-ip">
+										<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
+										<div class="line"></div>
+									</div>
+									<div class="module-ico">
+										<button type="button" class="btn-del">
+											<i class="ico delete lg"></i>
+										</button>
+									</div>
 								</div>
 								<p class="error-txt">비밀번호가 일치하지 않습니다</p>
 							</div>
+
+							<div class="ip-group">
+								<label for="ip01" class="ip-label">비밀번호</label>
+								<div class="row error">
+									<div class="module-ip">
+										<input type="password" id="fakePassword" class="ip-txt" placeholder="비밀번호 확인">
+										<div class="line"></div>
+									</div>
+									<div class="module-ico">
+										<button type="button" class="btn-del">
+											<i class="ico delete lg"></i>
+										</button>
+										<button id="toggler" type="button" class="ip-icon">
+											<i class="ico eye-on lg"></i>
+										</button>
+									</div>
+								</div>
+								<p class="error-txt">비밀번호가 일치하지 않습니다</p>
+							</div>
+
+							<div class="ip-group">
+								<div class="row">
+									<div class="module-ip">
+										<input type="number" class="ip-txt">
+										<div class="line"></div>
+									</div>
+									<div class="module-ico">
+										<button type="button" class="btn-del">
+											<i class="ico delete lg"></i>
+										</button>
+										<span class="time">3:00</span>
+									</div>
+								</div>
+								<p class="error-txt">인증코드가 일치하지 않습니다</p>
+							</div>
+
+							<div class="ip-group">
+								<label for="card" class="ip-label">카드번호 입력</label>
+								<div class="row card">
+									<div class="module-ip">
+										<input id="card" type="text" class="ip-txt" data-pos="1" placeholder="1234" value="1234" maxlength="4">
+										<input type="text" class="ip-txt" data-pos="2" placeholder="0000" maxlength="4">
+										<input type="text" class="ip-txt" data-pos="3" placeholder="0000" maxlength="4">
+										<input type="text" class="ip-txt" data-pos="4" placeholder="0000" maxlength="4">
+										<div class="line"></div>
+									</div>
+									<div class="module-ico">
+										<button type="button" class="btn-del">
+											<i class="ico delete lg"></i>
+										</button>
+									</div>
+								</div>
+							</div>
+
+							<div class="ip-group">
+								<label for="ip02" class="ip-label">유효기간</label>
+								<div class="row expiration">
+									<div class="module-ip">
+										<input type="number" class="ip-txt" placeholder="MM">
+										<span class="txt">/</span>
+										<input type="number" class="ip-txt" placeholder="YY">
+										<div class="line"></div>
+									</div>
+									<div class="module-ico">
+										<button type="button" class="btn-del">
+											<i class="ico delete lg"></i>
+										</button>
+									</div>
+								</div>
+							</div>
+
+							<div class="ip-group">
+								<div class="row join">
+									<div class="module-ip">
+										<input type="text" class="ip-txt" placeholder="쿠폰 번호 입력">
+										<div class="line"></div>
+									</div>
+									<div class="module-btn">
+										<button class="btn md">조회</button>
+									</div>
+								</div>
+							</div>
+
+							<div class="ip-group">
+								<label for="ip01" class="ip-label">롯데 이메일 계정 인증</label>
+								<div class="row mail-certi">
+									<div class="module-ip">
+										<input id="ip01" type="email" class="ip-txt" placeholder="롯데 이메일 계정 입력">
+										<div class="line"></div>
+									</div>
+									<div class="mail-txt">
+										@lotte.net
+									</div>
+								</div>
+								<p class="error-txt">롯데 이메일 계정이 일치하지 않습니다</p>
+							</div>
+
+
+							------------------------------------------------------------------------------
+
 
 							<div class="ip-group">
 								<div class="row error">
