--- a/src/scss/_input.scss
+++ b/src/scss/_input.scss
@@ -1,16 +1,114 @@
 @charset "UTF-8";
 
-$input-height: 40px;
-$line-color: #878787 !default;
-$line-color-active: #5CD79A !default;
-$validation-error: #D7535C !default;
-$line-color-disabled: #989898 !default;
+$input-height: 48px;
 $animation: all .2s ease;
+
+/* input */
+input[type="text"],
+input[type="password"],
+input[type="number"],
+input[type="email"] {
+	height:$input-height;
+	color:$navy-070;
+
+	@include ell;
+	
+	&::-ms-clear {
+		display:none;
+	}
+	&::placeholder {
+		font-size:$font-md;
+		color:$navy-020;
+		font-weight:500;
+	}
+	&[readonly],
+	&:disabled {
+		color:#6c757d;
+		background-color:#dee2e6;
+	}
+	&:read-only {
+		color:#6c757d;
+		background-color:#dee2e6;
+	}
+}
+
  
 .ip-group {
 	margin-top:24px;
 	&:first-child,&.first{
 		margin-top:0;
+	}
+
+	// 버튼
+	.join{
+		.module-ip{
+			position:relative;
+		}
+	}
+
+	// 카드
+	.card{
+		.module-ip{
+			display:flex;
+			flex:1;
+		}
+	}
+
+	// 유효기간
+	.expiration{
+		.module-ip{
+			display:flex;
+			.ip-txt:first-child{
+				flex:0 0 auto;
+				width:25px;
+			}
+		}
+	}
+
+	// 이메일 계정 인증
+	.row.mail-certi{
+		align-items:flex-end;
+
+		.module-ip{
+			position:relative;
+		}
+		.mail-txt{
+			padding-left:8px;
+			color:$navy-070;
+			@include fontSize(18);
+			font-weight:500;
+		}
+	}
+
+	.module {
+		&-ip{
+			flex:1 1 auto;
+		}
+		&-ico{
+			display:inline-flex;
+			align-items:center;
+			button{
+				display:inline-flex;
+				margin-left:10px;
+				&:first-child{
+					margin-left:0;
+				}
+			}
+			.time{
+				display:inline-flex;
+				color:$navy-020;
+				&:not(:first-child){
+					margin-left:8px;
+				}
+			}
+		}
+		&-btn{
+			flex-basis:92px;
+			padding-left:8px;
+			.btn{
+				width:100%;
+			}
+		}
 	}
 
 	&.unit{
@@ -49,8 +147,6 @@ $animation: all .2s ease;
 		background:transparent;
 		outline:none;
 	}
-	
-	@include ipLine();
 
 	.ip-label{
 		display:inline-block;
@@ -59,6 +155,8 @@ $animation: all .2s ease;
 		font-weight:500;
 		line-height:1;
 	}
+	
+	@include ipLine();
 
 	.icon-group{
 		display:inline-flex;
@@ -67,6 +165,7 @@ $animation: all .2s ease;
 		.btn-del{
 			display:inline-flex;
 		}
+
 		.ip-icon{
 			display:inline-flex;
 			margin-left:10px;
@@ -101,8 +200,11 @@ $animation: all .2s ease;
 			display:block;
 			margin-top:5px;
 			font-size: $font-sm;
-			color: $validation-error;
+			color: $red-060;
 			line-height:17px;
+		}
+		.time{
+			color: $red-060;
 		}
 	}
 
@@ -134,35 +236,6 @@ $animation: all .2s ease;
 
 	&.reset{
 		margin-top:0;
-	}
-}
-/* input */
-input[type="text"],
-input[type="password"],
-input[type="number"],
-input[type="email"] {
-	height:$input-height;
-	padding:0 15px 0 0;
-	color:$navy-070;
-
-	@include ell;
-	
-	&::-ms-clear {
-		display:none;
-	}
-	&::placeholder {
-		font-size:$font-md;
-		color:$navy-020;
-		font-weight:500;
-	}
-	&[readonly],
-	&:disabled {
-		color:#6c757d;
-		background-color:#dee2e6;
-	}
-	&:read-only {
-		color:#6c757d;
-		background-color:#dee2e6;
 	}
 }
 
